tests/type-errors/expr_cmp_eq_list.arl
archetype expr_cmp_eq_list

entry exec () {
  var a : list<int> = [1; 2; 3];
  var b : list<int> = [1; 2; 3];
  dorequire (a = b);
}
